Displaying price in dollars

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -6,4 +6,5 @@
 <p><%= link_to product.name, product_path(product) %></p>
 <p><%= product.description %></p>
 <p><%= product.price_in_cents %></p>
+<p><%= @product.formatted_price %>, <%= @product.display_product_correct_price %></p>
 <% end %>
