--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,7 +1,7 @@
 <% link_to "Back to Products", products_url %>
 
 <p><%= @product.name %>, <%= @product.price_in_cents %></p>
-
+<p><%= @product.formatted_price %>, <%= @product.display_product_correct_price %></p>
 
 
 
