--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,5 +1,5 @@
-<h1>Add a product</h1>
-
-<% link_to "Back to products", products_url %>
+<h1>New product</h1>
 
 <%= render 'form' %>
+
+<%= link_to 'Back', products_path %>
