--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
 </head>
 <body>
 	<% if flash[:notice] %>
-		<p id="notice"><%= flash[:notice %></p>
+		<p id="notice"><%= flash[:notice] %></p>
 	<% end %>
 	<% if flash[:alert] %>
 	<p id="alert"><%= flash[:alert] %></p>
@@ -17,11 +17,9 @@
 
 <%= yield %>
 
-	<%= yield %>
-
     <p class="userinfo">
       <% if current_user %>
-        Signed in as <%= current_user.email %>. <%= link_to "Log out", session_path("current"), :method => :delete %>
+        Signed in as <%= current_user.name %>. <%= link_to "Log out", session_path("current"), :method => :delete %>
       <% else %>
         <%= link_to "Log in", new_session_path %> or <%= link_to "Sign up", new_user_path %>
       <% end %>
