--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,9 +1,26 @@
 <h1>Products</h1>
-<%= link_to "New Product", "/products/new" %>
+<%= link_to 'New Product', new_product_path %>
 
-
-<% @products.each do |product| %>
-<p><%= link_to product.name, product_path(product) %></p>
-<p><%= product.description %></p>
-<p><%= product.formatted_price %></p>
+<%= form_tag products_path, method: :get, authentication: false, id: 'search-form' do %>
+	<%= text_field_tag :search, params[:search] %>
+  <%= submit_tag "Search" %>
 <% end %>
+
+<!-- renders a helpful message with numbers of displayed vs. total entries -->
+<p id="products-count"><%= page_entries_info @products %></p>
+
+
+<div id="products">
+<%= render @products %>
+</div>
+
+<!-- outputs several pagination links such as « First ‹ Prev ... 2 3 4 5 6 7 8 9 10 ... Next › Last » -->
+<p id="products-pagination"><%= paginate @products %></p>
+
+
+
+
+
+
+
+
