--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -2,33 +2,19 @@
 
   <p>Reviews for <%= @product.name %></p>
 
-  <% @product.reviews.each do |review| %>
-    <p>
-      <%= review.comment %>
-      <br>
-      <% if review.user != nil %>
-        <em> by <%= review.user.email %></em>
-        Added on: <%= review.created_at %>
-      <% end %>
-    </p>
-  <% end %>
+  <div id="review-list">
+  <%= render :partial => "reviews" %>
+  </div>
 
 
   <% if current_user %>
-  <h4>New Review</h4>
+    <h4>New Review</h4>
 
-  <%= form_for([@product, @review]) do |f| %>
-    <% if @review.errors.any? %>
-      <div id="error_explanation">
-        <h2><%= pluralize(@review.errors.count, "error") %> prohibited this review from being saved:</h2>
-
-        <ul>
-        <% @review.errors.full_messages.each do |msg| %>
-          <li><%= msg %></li>
-        <% end %>
-        </ul>
+    <%= form_for [@product, @review], :remote => true do |f| %>
+      <div id="review-form-errors">
+      <%= render :partial => "/products/review_form_errors" %>
+    
       </div>
-    <% end %>
 
     <div class="field">
       <%= f.label :comment %><br />
@@ -37,13 +23,41 @@
     <div class="actions">
       <%= f.submit %>
     </div>
-  <% end %>
+
+    <% end %>
 
 <% else %>
   <p>Please <%= link_to "log in", new_session_path %> to add a review.</p> 
 <% end %>
 
 
+<script type="text/javascript">
+
+  $(function() {
+      $("#new_review")
+        .on('ajax:beforeSend', function() { // set this code to happen just before the ajax request is made
+          $("input[type='submit']") // make changes to the submit button
+            .val('Saving...') // change the text on the button
+            .attr('disabled', 'disabled'); // disable the button
+            .on('ajax:complete', function() {
+          $("input[type='submit']")
+            .val('Create Review')
+            .removeAttr('disabled');
+        });
+      })
+  });
+
+
+
+  $(document).ready(function() {
+     $("#new_review")
+        .on('ajax:beforeSend', function() {alert("loading!");})
+        .on('ajax:success', function(data, status, xhr) {alert("success!");})
+        .on('ajax:error', function(xhr, status, error) {alert("error!");})
+        .on('ajax:complete', function() {alert("complete!");});
+  });
+
+</script>
 
 
 
